Changelog
=========

15.6-dev0 - (unreleased)
---------------------------

15.5 - (2022-04-20)
---------------------------
* Cleanup: Move MultiDataProvenance code to eea.app.visualisation
  [avoinea refs #130851]

15.4 - (2021-10-14)
---------------------------
* Feature: RestAPI for Data Reporting obligations
  [avoinea refs #139536]

15.3 - (2021-06-16)
---------------------------
* Feature: implemented EEAFigure provenance multi adapter
  in order to retrieve provenance data from ExternalDataSpec relations
  [ichim-david refs #130851]

15.2 - (2020-12-21)
---------------------------
* Bug fix: Added antialliasing configuration for Ghostscript
  [szabozo0 refs #120336]

15.1 - (2020-08-03)
---------------------------
* Change: cleaned temporal coverage and geographical_coverage macros from
  figure and dataset view, they now show up from the generic viewlets in place
  with other metadata
  [ichim-david refs #119540]
* Change: added upgrade script to cleanup geographicCoverage field values
  [alecghica refs #117948]

15.0 - (2020-06-19)
---------------------------
* Change: cleaned temporal coverage css override
  [ichim-david refs #117295]

14.9 - (2019-12-20)
---------------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on upgrade button
  available for eea.dataservice
  [iulianpetchesi refs #110427]

14.8 - (2019-11-29)
---------------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on upgrade button
  available for eea.dataservice
  [iulianpetchesi refs #110739]

14.7 - (2019-11-07)
---------------------------
* Bug fix: the field 'Last upload' is now hidden on EEAFigure view
  [alecghica refs #102731]

14.6 - (2019-11-06)
---------------------------
* Bug fix: Fix imgview adapter for EEAFigure when first FigureFile doesn't have Image children
  [avoinea refs #109515]

14.5 - (2019-10-30)
---------------------------
* Feature: the field 'Last upload' is now hidden
  [alecghica refs #102731]
